# karton-capa

./: Dockerfile  README.md  pyproject.toml
src/: __main__.py  __version__.py  capa.py
